Services/externalName.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
#  clusterIP: None
---
#################################
#ExternalName Service
#################################
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-external
spec:
  type: ExternalName
  externalName: nginx-service.default.svc.cluster.local #mynginx.com
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80 #POD port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
